# cqutil

./: .gitignore  README.md  pyproject.toml
cqutil/: __init__.py  align.py  dump.py  extract.py  markers.py  part.py  projection.py
cqutil/models/: __init__.py  bounding_box.py  direction.py  face.py  hole.py  part.py  slot.py  vec3.py
