[project]
name = "cqutil"
version = "0.1.0"
description = "CadQuery utilities for extracting design values from STEP files"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cqutil"]

[tool.hatch.build.targets.sdist]
include = ["cqutil", "README.md", "pyproject.toml"]
